Remove navbar from change-password component, etract Logo to resuable component, wrap setIsChangingPassword(false) with useCallBack(), correct css classNames and remove redundant media queries

--- a/packages/apps/esm-login-app/src/change-password/change-password.scss
+++ b/packages/apps/esm-login-app/src/change-password/change-password.scss
@@ -31,10 +31,12 @@
 
 .container {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   position: relative;
+  margin-top: 2.5rem;
 }
 
 .changePasswordCard {
@@ -45,20 +47,4 @@
   padding: 2.5rem;
   position: relative;
   min-height: fit-content;
-}
-
-@media only screen and (min-width: 481px) {
-  .container {
-    height: 100vh;
-  }
-}
-
-@media only screen and (max-width: 480px) {
-  .login-card {
-    margin-top: 2.5%;
-    border: none;
-  }
-  .container {
-    height: 100vh;
-  }
 }
